--- a/haml/js-introduction.haml
+++ b/haml/js-introduction.haml
@@ -1,16 +1,11 @@
-.row
-  .col1of4.by-right
-    %h2.firm Preface
-
-  .col3of4
-    #p1.article
-      %a.article-anchor(href="#p1") #1
-      %h2.positive It's been a long story
-      %img.article-pic(alt="" src="images/article/hello.jpg")/
-      %p
-        We spend years finding a needed approach to build reach user
-        interfaces for a large projects with more than 10 people working
-        on each project at 
-        %a.rw-link(href="http://railsware.com" target="_blank") Railsware
-        .
+#p1.article
+  %a.article-anchor(href="#p1") #1
+  %h2.positive Preface
+  %img.article-pic(alt="" src="images/article/hello.jpg")/
+  %p
+    We spend years finding a needed approach to build reach user
+    interfaces for a large projects with more than 10 people working
+    on each project at 
+    %a.rw-link(href="http://railsware.com" target="_blank") Railsware
+    .
 
