--- a/haml/js-structure.haml
+++ b/haml/js-structure.haml
@@ -1,4 +1,5 @@
-.article
+#p12.article
+  %h3.article-title File structure
   %img.article-pic(alt="" src="images/article/whats-inside.jpg")/
   %h3.positive Framework
   %ul.unordered-list
@@ -64,7 +65,7 @@
       %p.mbx
         %strong /modules/player-states.sass
 
-  %h2.firm Grids
+  %h2#p13.firm Grids
   %img.article-pic(alt="" src="images/article/maintenance.jpg")/
   %p.mbl
     We like
