--- a/sass/layouts/application.sass
+++ b/sass/layouts/application.sass
@@ -5,13 +5,14 @@ body
   color: $base-color
   font: 400 #{$base-font-size}/1.35 $base-font
 
-.wrapper
+.container
+  padding-left: 210px
   margin: auto
-  max-width: 600px
+  max-width: 500px
+
+.wrapper
+  max-width: 480px
   padding: 25px 0
   position: relative
-  +clearfix
-
-.row
-  +clearfix
+  +last-col
 
