--- a/haml/js-introduction.haml
+++ b/haml/js-introduction.haml
@@ -6,6 +6,5 @@
     We spend years finding a needed approach to build reach user
     interfaces for a large projects with more than 10 people working
     on each project at 
-    %a.rw-link(href="http://railsware.com" target="_blank") Railsware
-    .
+    <a class="rw-link" href="http://railsware.com" target="_blank">Railsware</a>.
 
