--- a/haml/js-structure.haml
+++ b/haml/js-structure.haml
@@ -2,7 +2,7 @@
   %h3.article-title File structure
   %img.article-pic(alt="" src="images/article/whats-inside.jpg")/
   %h3.positive Framework
-  %ul.unordered-list
+  %ul.mbl
     %li
       %strong base.sass
       — linker for all framework stylesheets
@@ -26,7 +26,7 @@
       — stores all typography related style definitions
 
   %h3.positive Layouts
-  %ul.unordered-list
+  %ul.mbl
     %li
       %strong *.sass
       — place for general layout styling. Store body, wrapper, content and other layout specific 
@@ -34,7 +34,7 @@
       all kinds of layouts here like: application.sass, homepage.sass, admin.sass
 
   %h3.positive Library
-  %ul.unordered-list
+  %ul.mbl
     %li
       %strong *.sass
       — place for groups like buttons, text-inputs, selects, radios, checkboxes and other 
@@ -43,7 +43,7 @@
       folders inside the library: /library/application/ /library/admin/
 
   %h3.positive Modules
-  %ul.unordered-list
+  %ul.mbl
     %li
       %strong *.sass
       — use to create modules such as login-block.sass, modal.sass, votebar.sass, dropdown.sass, 
@@ -124,14 +124,11 @@
 
   %h2.mtl.firm Who use it?
   %p.mbl
-    Most of the products in
-    %a.rw-link(href="http://railsware.com") Railsware
-    are made based on Scaffy. We're working hard to get all achievements ;)
+    Most of the products in <a class="rw-link" href="http://railsware.com">Railsware</a> are 
+    made based on Scaffy. We're working hard to get all achievements ;)
 
   %p.mbl
-    Also
-    %a(href="http://designmodo.com/futurico-html") Futurico User Interface
-    is based on it.
+    Also <a href="http://designmodo.com/futurico-html">Futurico User Interface</a> is based on it.
 
   <a href="https://twitter.com/share" class="twitter-share-button" data-via="railsware">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
