--- a/haml/js-header.haml
+++ b/haml/js-header.haml
@@ -1,4 +1,8 @@
-.article.by-right
+.article
+  .hidden-desktop
+    %a.logo(href="#")
+      %img(alt="Scaffy by Railsware" src="images/logo.png")/
+
   %a.button.mrm(href="http://railsware.github.com/scaffy/futurico") Demo
   %a.button(href="http://github.com/railsware/scaffy") Fork on Github
 
