--- a/haml/js-sidebar.haml
+++ b/haml/js-sidebar.haml
@@ -1,7 +1,7 @@
 .sidebar
   .sidebar-scroll
     %ul
-      %li
+      %li.shown-desktop
         %a.logo(href="#")
           %img(alt="Scaffy by Railsware" src="images/logo.png")/
       %li
