--- a/sass/framework/mixins.sass
+++ b/sass/framework/mixins.sass
@@ -77,6 +77,8 @@
     background: $background
     color: $color
 
+// Grids
+// ==============================================
 =clearfix
   &:after
     content: '.'
@@ -97,6 +99,8 @@
     line-height: 0
     visibility: hidden
 
+// Scrollbar
+// ==============================================
 =scrollbar
   &::-webkit-scrollbar
     background: rgba(#fff, .05)
