--- a/css/modules/article.css
+++ b/css/modules/article.css
@@ -1,17 +1,34 @@
 .article {
   padding: 0 0 30px 30px;
   position: relative; }
-  .article img {
-    width: 100%; }
 
 .article-pic {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  width: 100%; }
 
 .article-anchor {
   color: #666666;
   left: 100%;
-  margin-left: 30px;
+  margin: 5px 0 0 30px;
   position: absolute; }
 
 .article-title {
   color: #1dd681; }
+
+@media all and (max-width: 499px) {
+  .article {
+    padding-left: 0; }
+
+  .article-anchor {
+    left: auto;
+    right: 0; }
+
+  .article-title {
+    margin-right: 40px; } }
+@media all and (min-width: 500px) and (max-width: 780px) {
+  .article-anchor {
+    left: auto;
+    right: 0; }
+
+  .article-title {
+    margin-right: 40px; } }
