--- a/css/modules/sidebar.css
+++ b/css/modules/sidebar.css
@@ -6,7 +6,12 @@
   position: fixed;
   top: 0;
   width: 200px;
-  z-index: 10; }
+  z-index: 10;
+  -webkit-transition: margin 0.3s;
+  -moz-transition: margin 0.3s;
+  -ms-transition: margin 0.3s;
+  -o-transition: margin 0.3s;
+  transition: margin 0.3s; }
   .sidebar a {
     display: inline-block;
     padding: 5px 0; }
@@ -35,3 +40,12 @@
     min-height: 20px; }
   .sidebar-scroll::-webkit-scrollbar-thumb:vertical:hover, .sidebar-scroll::-webkit-scrollbar-thumb:horizontal:hover {
     background: #1dd681; }
+
+@media all and (max-width: 499px) {
+  .sidebar {
+    margin-left: -100%; } }
+@media all and (min-width: 500px) and (max-width: 780px) {
+  .sidebar {
+    left: 0;
+    margin-left: 15px;
+    width: 25%; } }
