--- a/haml/js-header.haml
+++ b/haml/js-header.haml
@@ -3,8 +3,9 @@
     %a.logo(href="#")
       %img(alt="Scaffy by Railsware" src="images/logo.png")/
 
-  %a.button.mrm(href="http://railsware.github.com/scaffy/futurico") Demo
-  %a.button(href="http://github.com/railsware/scaffy") Fork on Github
+  .ptm
+    %a.button.mrm(href="http://railsware.github.com/scaffy/futurico") Demo
+    %a.button(href="http://github.com/railsware/scaffy") Fork on Github
 
 .article
   %h1.positive Set of best practices, approaches and tools that help writing modular CSS
