--- a/haml/js-problems.haml
+++ b/haml/js-problems.haml
@@ -1,40 +1,38 @@
-<div class="row">
-  <div class="article" id="p2">
-    <a href="#p2" class="article-anchor">#2</a>
-    <p class="mbl">
+.row
+  #p2.article
+    %a.article-anchor(href="#p2") #2
+    %h2.article-title Problems
+    %p.mbl
       One major problem is a clear communication
-      and involving collaboration across the team. Everyone writes 
+      and involving collaboration across the team. Everyone writes
       code in the way he feels comfortable. No rules. Just a mess.
-    </p>
-    <p class="mbl">
+
+    %p.mbl
       Back-end engineers can't start implementing new feature
       without finished markup & CSS. Front-end guy is a bottleneck
       in this situation.
-    </p>
-    <p class="mbl">
-      We spend too much time fixing bugs because of stylesheets size 
+
+    %p.mbl
+      We spend too much time fixing bugs because of stylesheets size
       and location dependent UI components. And we can't guarantee we
       checked all places.
-    </p>
-    <p class="mbl">
+
+    %p.mbl
       Scaling CSS for endless amount of pages/layouts is actually
       another problem. So many confusion and mess start happening
       when project grows continuously.
-    </p>
-    <p class="mbl">
-      Maintenance become a huge pain in the ass when not used old 
+
+    %p.mbl
+      Maintenance become a huge pain in the ass when not used old
       code is spreaded all over a project.
-    </p>
-    <p class="mbl">
-      Code is never predictable to find by looking just at the 
+
+    %p.mbl
+      Code is never predictable to find by looking just at the
       selector. So much frustration.
-    </p>
-    <h2 class="positive">
-      And we decided to start with 
-      <a href="http://oocss.org" target="_blank">OOCSS</a> methodology 
-      as a base for creating approach that meets our expectations, 
-      needs and the way we build products.
-    </h2>
-  </div>
-</div>
+
+    %h2.positive
+      And we decided to start with
+      %a(href="http://oocss.org" target="_blank") OOCSS
+      methodology as a base for creating approach that meets our
+      expectations, needs and the way we build products.
 
