--- a/haml/js-structure.haml
+++ b/haml/js-structure.haml
@@ -1,4 +1,5 @@
 #p12.article
+  %a.article-anchor(href="#p12") #12
   %h3.article-title File structure
   %img.article-pic(alt="" src="images/article/whats-inside.jpg")/
   %h3.positive Framework
@@ -65,7 +66,9 @@
       %p.mbx
         %strong /modules/player-states.sass
 
-  %h2#p13.firm Grids
+#p13.article
+  %a.article-anchor(href="#p13") #13
+  %h2.article-title Grids
   %img.article-pic(alt="" src="images/article/maintenance.jpg")/
   %p.mbl
     We like
@@ -122,7 +125,7 @@
     .col1of6.last-col
       .inner-col 1 of 6
 
-  %h2.mtl.firm Who use it?
+  %h2.article-title Who use it?
   %p.mbl
     Most of the products in <a class="rw-link" href="http://railsware.com">Railsware</a> are 
     made based on Scaffy. We're working hard to get all achievements ;)
