Scaffy new path

--- a/haml/js-header.haml
+++ b/haml/js-header.haml
@@ -4,8 +4,8 @@
       %img(alt="Scaffy by Railsware" src="images/logo.png")/
 
   .ptm
-    %a.button.mrm(href="http://railsware.github.com/scaffy/futurico") Demo
-    %a.button(href="http://github.com/railsware/scaffy") Fork on Github
+    %a.button.mrm(href="futurico") Demo
+    %a.button(href="http://github.com/railsware/scaffy.railsware.com") Fork on Github
 
 .article
   %h1.positive Set of best practices, approaches and tools that help writing modular CSS
