--- a/haml/js-sidebar.haml
+++ b/haml/js-sidebar.haml
@@ -2,8 +2,8 @@
   .sidebar-scroll
     %ul
       %li.shown-desktop
-        %a.logo(href="#")
-          %img(alt="Scaffy by Railsware" src="images/logo.png")/
+        %a.logo.mbm(href="#")
+          <span>s</span><span>c</span><span>a</span>ffy
       %li
         %a(href="#p1") Preface
       %li
