--- a/haml/js-header.haml
+++ b/haml/js-header.haml
@@ -1,11 +1,11 @@
 .article
   .hidden-desktop
     %a.logo(href="#")
-      %img(alt="Scaffy by Railsware" src="images/logo.png")/
+      <span>s</span><span>c</span><span>a</span>ffy
 
   .ptm
     %a.button.mrm(href="futurico") Demo
-    %a.button(href="http://github.com/railsware/scaffy.railsware.com") Fork on Github
+    %a.button(href="http://github.com/railsware/scaffy.railsware.com") Contribute
 
 .article
   %h1.positive Set of best practices, approaches and tools that help writing modular CSS
