--- a/haml/js-classname.haml
+++ b/haml/js-classname.haml
@@ -1,16 +1,16 @@
-#p11.article
-  %a.article-anchor(href="#p11") #11
+#p7.article
+  %a.article-anchor(href="#p7") #7
   %h2.article-title Class name should live for years
 
   Class name should describe the function of an object. If we're 
   talking about color appearance (object modifier) then it is 
   useful to abstract naming cause it's appearance can change quite 
-  frequently. As an example let's take a <code>.button</code>.
+  frequently.
 
   %pre<
     %code<
       :preserve
-        .button.green -> .button.positive
-        .light-blue -> .pale
-        .white -> .contrast
+        .button.green   -> .button.is-positive
+        .tab.tab-blue   -> .tab.is-pale
+        .white          -> .contrast
 
