--- a/haml/js-header.haml
+++ b/haml/js-header.haml
@@ -5,7 +5,7 @@
 
   .ptm
     %a.button.mrm(href="futurico") Demo
-    %a.button(href="http://github.com/railsware/scaffy.railsware.com") Contribute
+    %a.button(href="http://github.com/railsware/scaffy.railsware.com") Fork
 
 .article
   %h1.positive Set of best practices, approaches and tools that help writing modular CSS
