--- a/haml/js-object.haml
+++ b/haml/js-object.haml
@@ -1,6 +1,6 @@
-#p5.article
-  %a.article-anchor(href="#p5") #5
-  %h2.article-title Object and it's modifier
+#p3.article
+  %a.article-anchor(href="#p3") #3
+  %h2.article-title Object
   %img.article-pic(alt="" src="images/article/modifier.jpg")/
 
   %p.mbl
@@ -29,4 +29,8 @@
   %p.mbl
     You can move similar objects to a group — a separate stylesheet where you store all modifiers
     of the current class.
+
+  %p
+    Object should fit a whole available space of the grid it is placed in.
+    It will help to reuse this object in other locations.
 
