--- a/haml/js-problems.haml
+++ b/haml/js-problems.haml
@@ -23,8 +23,8 @@
       when project grows continuously.
 
     %p.mbl
-      Maintenance become a huge pain in the ass when not used old
-      code is spreaded all over a project.
+      Maintenance become a huge pain in the ass when old code is
+      spreaded all over the project.
 
     %p.mbl
       Code is never predictable to find by looking just at the
