--- a/sass/application.sass
+++ b/sass/application.sass
@@ -1,4 +1,4 @@
-@import 'framework/base'
+@import 'scaffy/bundle'
 @import 'layouts/application'
 @import 'library/library'
 @import 'modules/debug-grid'
