--- a/sass/scaffy/config.sass
+++ b/sass/scaffy/config.sass
@@ -5,6 +5,7 @@ $neutral:    #666
 $pale:       #999
 $bare:       #aaa
 $firm:       #1dd681
+$bright:     #e4c917
 $sharp:      #252525
 $contrast:   #fff
 $positive:   #1dd681
